metrics/metrics-ingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: metrics-ingress
  namespace: metrics
  annotations:
    kubernetes.io/ingress.class: "internal-nginx"
spec:
  tls:
  - hosts:
    - grafana-internalk8s.10010sh.cn
    - prometheus-internalk8s.10010sh.cn
    - alertmanager-internalk8s.10010sh.cn
    secretName: universal-10010sh-cn-tls
  rules:
  - host: grafana-internalk8s.10010sh.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: metrics-monitor-grafana
          servicePort: 80
  - host: prometheus-internalk8s.10010sh.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: metrics-monitor-prometheus-prometheus
          servicePort: 9090
  - host: alertmanager-internalk8s.10010sh.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: metrics-monitor-prometheus-alertmanager
          servicePort: 9093
